# Non-LLM

./: .gitignore  Makefile  README.md  coplc.py  pyproject.toml  requirements-dev.txt
docs/copl/: 00_USER_GUIDE.md  00_overview.md  01_grammar_spec.md  02_type_system.md  03_effect_system.md  04_sir_schema.md  05_operational_semantics.md  06_memory_concurrency.md  07_lowering_spec.md  08_module_error_handling.md  09_compiler_architecture.md  10_artifact_engine.md  11_incremental_compilation.md  12_test_framework.md  Non-LLM.code-workspace
docs/cortex/: 00_unified_vision.md  01_integration_contracts.md  02_project_management.md  03_work_rules.md  04_ai_handoff.md  05_risk_mitigation.md  06_project_governance.md
docs/geas/: 00_overview.md  01_architecture.md  02_core_model.md  03_loss_functions.md  04_memory_system.md  05_protocol.md  06_data_strategy.md  07_training_pipeline.md  08_runtime_pipeline.md  09_branch_memory.md  10_evaluation.md
docs/status/: current_sprint.md
docs/status/copl/: current_sprint.md
docs/status/geas/: current_sprint.md
docs/status/phase_gates/: P1_LexerParser_Report.md  P2_SemanticAnalysis_Plan.md  P2_SemanticAnalysis_Report.md  P3_CodeGen_Report.md
docs/status/shared/: project_overview.md
examples/: 01_minimal.copl  02_can_driver.copl
src/copl/: __init__.py  __main__.py  errors.py  incremental.py
src/copl/artifacts/: __init__.py  engine.py
src/copl/codegen/: c_builder.py  transpiler.py
src/copl/lexer/: __init__.py  lexer.py  (+1 more)
tests/: conftest.py  test_artifacts.py  test_cli.py  test_incremental.py  test_testing_framework.py
(+29 files in other folders)
